--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,3 +24,7 @@ require:
 Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
   Enabled: false
+
+Metrics/BlockLength:
+  Exclude:
+    - config/routes.rb
