--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,6 +25,9 @@ Style/Documentation:
   Description: 'Document classes and non-namespace modules.'
   Enabled: false
 
+Metrics/ParameterLists:
+  Max: 6
+
 Metrics/BlockLength:
   Exclude:
     - config/routes.rb
