--- a/api/Pipfile
+++ b/api/Pipfile
@@ -26,6 +26,8 @@ dill = "*"
 torch = "==2.2.0"
 torchvision = "==0.17.0"
 torchaudio = "==2.2.0"
+langchain = "*"
+g4f = {extras = ["all"], version = "*"}
 
 [dev-packages]
 flake8 = "*"
