--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "sort-by": "^0.0.2",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.5",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
