--- a/.gitattributes
+++ b/.gitattributes
@@ -3,9 +3,10 @@
 # Mark the database schema as having been generated.
 db/schema.rb linguist-generated
 
-# Mark Pipfile.lock and Gemfile.lock as having been generated.
+# Mark lockfiles as having been generated.
 Gemfile.lock linguist-generated
 Pipfile.lock linguist-generated
+mix.lock linguist-generated
 
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
@@ -13,5 +14,5 @@ config/credentials/*.yml.enc diff=rails_credentials
 config/credentials.yml.enc diff=rails_credentials
 
 # Mark Jupyter Notebooks and their HTML as vendored
-api/assets/ml_models/**.html linguist-vendored
+api/assets/ml_models/*/**.html linguist-vendored
 api/notebooks/**.ipynb linguist-vendored
