--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,7 +26,10 @@ Metrics/ParameterLists:
 
 Metrics/BlockLength:
   Exclude:
+    # Routes are typically going to grow quite a lot
     - config/routes.rb
+    # Seed generation can be complex. Its safe to ignore this rule for seeds.rb.
+    - db/seeds.rb
 
 Rails/SkipsModelValidations:
   Exclude:
