--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,8 @@ db/schema.rb linguist-generated
 Gemfile.lock linguist-generated
 Pipfile.lock linguist-generated
 mix.lock linguist-generated
+yarn.lock linguist-generated
+package-lock.json linguist-generated
 
 # Mark any vendored files as having been vendored.
 vendor/* linguist-vendored
