--- a/verse/package.json
+++ b/verse/package.json
@@ -12,13 +12,14 @@
     "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.19",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.2"
+    "tailwindcss": "^3.4.4",
+    "vue": "^3.4.28",
+    "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.2.11"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "vite": "^5.3.1"
   }
 }
