--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.397.0",
     "match-sorter": "^6.3.4",
     "next-themes": "^0.3.0",
+    "object-path": ">=0.11.8",
     "phoenix": "^1.7.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
