--- a/test/fixtures/account_chat_maps.yml
+++ b/test/fixtures/account_chat_maps.yml
@@ -1,4 +1,12 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: account_chat_maps
+#
+#  account_id :bigint           not null, primary key
+#  chat_id    :bigint           not null, primary key
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   account: one
