--- a/test/fixtures/account_tokens.yml
+++ b/test/fixtures/account_tokens.yml
@@ -1,4 +1,13 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: account_tokens
+#
+#  id         :bigint           not null, primary key
+#  account_id :bigint           not null
+#  scope      :integer          not null
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#
 
 one:
   account: one
