--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,4 +1,18 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: accounts
+#
+#  id                :bigint           not null, primary key
+#  user_id           :bigint           not null
+#  role              :integer          default("user"), not null
+#  first_name        :string           not null
+#  last_name         :string           not null
+#  username          :string           not null
+#  tagline           :text
+#  latest_message_at :datetime
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#
 
 one:
   first_name: MyString
