--- a/test/fixtures/admin_comments.yml
+++ b/test/fixtures/admin_comments.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: admin_comments
+#
+#  id                     :bigint           not null, primary key
+#  admin_commentable_type :string           not null
+#  admin_commentable_id   :bigint           not null
+#  commenter_id           :bigint           not null
+#  body                   :text             not null
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#
 
 one:
   body: MyText
