--- a/test/fixtures/chats.yml
+++ b/test/fixtures/chats.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: chats
+#
+#  id                :bigint           not null, primary key
+#  chat_status       :integer
+#  chat_type         :integer          default("two_person"), not null
+#  chat_title        :string
+#  chat_description  :text
+#  latest_message_at :datetime         not null
+#  created_at        :datetime         not null
+#  updated_at        :datetime         not null
+#
 
 one:
   group_type: false
