--- a/test/fixtures/comments.yml
+++ b/test/fixtures/comments.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: comments
+#
+#  id               :bigint           not null, primary key
+#  account_id       :bigint           not null
+#  commentable_type :string           not null
+#  commentable_id   :bigint           not null
+#  body             :text
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
 
 one:
   commentable: one
