--- a/test/fixtures/ml_models.yml
+++ b/test/fixtures/ml_models.yml
@@ -1,4 +1,17 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: ml_models
+#
+#  id                    :bigint           not null, primary key
+#  account_id            :bigint           not null
+#  model_type            :integer          not null
+#  identifier            :string           not null
+#  title                 :string           not null
+#  description           :text             not null
+#  parameters_with_order :jsonb            not null
+#  created_at            :datetime         not null
+#  updated_at            :datetime         not null
+#
 
 one:
   title: MyString
