--- a/test/fixtures/prediction_params.yml
+++ b/test/fixtures/prediction_params.yml
@@ -1,4 +1,16 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: prediction_params
+#
+#  id              :bigint           not null, primary key
+#  ml_model_id     :bigint           not null
+#  param_type      :integer          not null
+#  name            :string           not null
+#  description     :text             not null
+#  possible_values :jsonb
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   name: MyString
