--- a/test/fixtures/question_options.yml
+++ b/test/fixtures/question_options.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: question_options
+#
+#  id          :bigint           not null, primary key
+#  question_id :bigint           not null
+#  correct     :boolean          default(FALSE), not null
+#  option_text :text             not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#
 
 one:
   question: one
