--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: questions
+#
+#  id               :bigint           not null, primary key
+#  quiz_id          :bigint           not null
+#  score            :integer          default(1), not null
+#  multiple_answers :boolean          default(FALSE), not null
+#  question_text    :text             not null
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
 
 one:
   quiz: one
