--- a/test/fixtures/quiz_undertakings.yml
+++ b/test/fixtures/quiz_undertakings.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: quiz_undertakings
+#
+#  id              :bigint           not null, primary key
+#  account_id      :bigint           not null
+#  quiz_id         :bigint           not null
+#  correct_answers :float            default(0.0), not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   account: one
