--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -1,4 +1,22 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: quizzes
+#
+#  id                      :bigint           not null, primary key
+#  account_id              :bigint
+#  timer                   :integer
+#  questions_count         :integer          default(0), not null
+#  quiz_undertakings_count :integer          default(0), not null
+#  rating_count            :integer          default(0), not null
+#  total_score             :integer          default(0), not null
+#  total_rating            :integer          default(0), not null
+#  title                   :string           not null
+#  published               :boolean          default(FALSE), not null
+#  timed                   :boolean          default(FALSE), not null
+#  description             :text             not null
+#  created_at              :datetime         not null
+#  updated_at              :datetime         not null
+#
 
 one:
   title: MyString
