--- a/test/fixtures/subreddits.yml
+++ b/test/fixtures/subreddits.yml
@@ -1,4 +1,15 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: subreddits
+#
+#  id                    :bigint           not null, primary key
+#  subreddit_subscribers :integer
+#  subreddit             :string           not null
+#  subreddit_url         :string           not null
+#  latest_scraped_at     :datetime
+#  created_at            :datetime         not null
+#  updated_at            :datetime         not null
+#
 
 one:
   subreddit: MyString
