--- a/test/fixtures/tag_maps.yml
+++ b/test/fixtures/tag_maps.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: tag_maps
+#
+#  id            :bigint           not null, primary key
+#  taggable_type :string           not null
+#  taggable_id   :bigint           not null
+#  tag_id        :bigint           not null
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
 
 one:
   taggable: one
