--- a/verse/package.json
+++ b/verse/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.19",
     "pinia": "^2.1.7",
