--- a/verse/package.json
+++ b/verse/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/vue": "^2.2.1",
+    "@tailwindcss/container-queries": "^0.1.1",
     "autoprefix": "^1.0.1",
     "autoprefixer": "^10.4.19",
     "pinia": "^2.1.7",
