--- a/test/fixtures/favorites.yml
+++ b/test/fixtures/favorites.yml
@@ -1,11 +1,21 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: favorites
+#
+#  id               :bigint           not null, primary key
+#  account_id       :bigint           not null
+#  favoritable_type :string           not null
+#  favoritable_id   :bigint           not null
+#  created_at       :datetime         not null
+#  updated_at       :datetime         not null
+#
 
 one:
+  favoritable: one
+  favoritable_type: Favoritable
   account: one
-  favouratable: one
-  favouratable_type: Favouratable
 
 two:
+  favoritable: two
+  favoritable_type: Favoritable
   account: two
-  favouratable: two
-  favouratable_type: Favouratable
