--- a/test/fixtures/embeddings.yml
+++ b/test/fixtures/embeddings.yml
@@ -1,4 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# == Schema Information
+#
+# Table name: embeddings
+#
+#  id              :bigint           not null, primary key
+#  embeddable_type :string           not null
+#  embeddable_id   :bigint           not null
+#  embedding       :vector(768)      not null
+#  created_at      :datetime         not null
+#  updated_at      :datetime         not null
+#
 
 one:
   embeddable: one
