--- a/config/queue.yml
+++ b/config/queue.yml
@@ -4,15 +4,15 @@ default: &default
       batch_size: 500
   workers:
     - queues: "*"
-      threads: 5
-      processes: 1
+      threads: 3
+      processes: <%= ENV.fetch("JOB_CONCURRENCY", 1) %>
       polling_interval: 0.1
 
 development:
- <<: *default
+  <<: *default
 
 test:
- <<: *default
+  <<: *default
 
 production:
- <<: *default
+  <<: *default
